--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -10,7 +10,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-
+floating_modifier Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 8
@@ -30,7 +30,9 @@ exec --no-startup-id dex --autostart --environment i3
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
-#exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+
+exec --no-startup-id feh --bg-scale Downloads/wallhaven-z8odwg.jpg
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -193,8 +195,8 @@ default_floating_border pixel 1
 hide_edge_borders smart
 
 #gaps
-gaps inner 15
-gaps top 5
+gaps inner 8
+gaps top 2
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
