--- a/dot_config/polybar/config
+++ b/dot_config/polybar/config
@@ -29,7 +29,7 @@ secondary = #e60053
 alert = #bd2c40
 
 [bar/example]
-;monitor = ${env:MONITOR:DP-3}
+monitor = ${env:MONITOR:}
 width = 100%
 height = 24
 ;offset-x = 1%
